--- a/core/requirements.txt
+++ b/core/requirements.txt
@@ -4,6 +4,7 @@ autobahn==24.4.2
 Automat==25.4.16
 cffi==1.17.1
 channels==4.2.2
+channels_redis==4.2.1
 constantly==23.10.4
 cryptography==45.0.3
 daphne==4.2.0
@@ -11,6 +12,7 @@ Django==5.2.1
 hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
+msgpack==1.1.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.22
