feat(UI): Frontend and Backend Working seemlessly. - Debuging steps are clear and responding properly - Chat UI polishied

--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,8 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 oauthlib==3.3.1
+psycog==0.0.1
+psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.22
